crates/zenith/tests/snapshots/screens__session_after_calls__80x24__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
   executable           /home/lab/solar/target/release/solar
   os                   linux
   os_build             null
   os_family            unix
   os_name              AlmaLinux
   os_release           "9.8"
   path_list_separator  :
   path_separator       /
   pointer_width        64
   temp_dir             /tmp
 › /describe solar.pign
    error   NOT_FOUND · API_NOT_FOUND · solar.describe · 0.31 ms · #5
   No API is registered under the name solar.pign.
   /api    expected  solar.ping
           received  solar.pign
           hint      Did you mean "solar.ping"? The edit distance is 2.
           docs      docs/ERRORS.md#not_found
 › /call solar.version
   ∙ solar.version, waiting 300.0 ms
┌──────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                               │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.31 ms ─── in orbit 3s ────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0: 73-73  #FFC23D on #0B0C14 bold
 1:  3-21  #FFC23D on #0B0C14
 2:  3-21  #FFC23D on #0B0C14
 3:  3-21  #FFC23D on #0B0C14
 4:  3-21  #FFC23D on #0B0C14
 5:  3-21  #FFC23D on #0B0C14
 6:  3-21  #FFC23D on #0B0C14
 7:  3-21  #FFC23D on #0B0C14
 8:  3-21  #FFC23D on #0B0C14
 9:  3-21  #FFC23D on #0B0C14
 9: 24-25  #F5F1E8 on #0B0C14 bold
10:  3-21  #FFC23D on #0B0C14
11:  0-22  #FFC23D on #0B0C14
12:  3-9   #FFC23D on #0B0C14 bold reversed
12: 12-20  #FFC23D on #0B0C14 bold
12: 24-36  #FFC23D on #0B0C14 bold
12: 37-53  #FFC23D on #0B0C14
14:  3-8   #FFC23D on #0B0C14
18:  0-21  #FFC23D on #0B0C14
19:  3-3   #FFC23D on #0B0C14
19:  5-17  #FFC23D on #0B0C14
21:  1-3   #FFC23D on #0B0C14
23:  3-3   #FFC23D on #0B0C14
23:  7-17  #FFC23D on #0B0C14 bold
