crates/zenith/tests/snapshots/screens__session_after_calls__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
   executable           /home/lab/solar/target/release/solar
   os                   linux
   os_build             null
   os_family            unix
   os_name              AlmaLinux
   os_release           "9.8"
   path_list_separator  :
   path_separator       /
   pointer_width        64
   temp_dir             /tmp
 › /describe solar.pign
    error   NOT_FOUND · API_NOT_FOUND · solar.describe · 0.31 ms · #5
   No API is registered under the name solar.pign.
   /api    expected  solar.ping
           received  solar.pign
           hint      Did you mean "solar.ping"? The edit distance is 2.
           docs      docs/ERRORS.md#not_found
 › /call solar.version
   ∙ solar.version, waiting 300.0 ms
┌──────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                               │
└──────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.31 ms ─── in orbit 3s ────────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #8C4907 on #F5F1E8 bold underlined
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #555355 on #F5F1E8
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  3-21  #8C4907 on #F5F1E8
 2:  3-21  #8C4907 on #F5F1E8
 3:  3-21  #8C4907 on #F5F1E8
 3: 24-27  #555355 on #F5F1E8
 4:  3-21  #8C4907 on #F5F1E8
 5:  3-21  #8C4907 on #F5F1E8
 6:  3-21  #8C4907 on #F5F1E8
 7:  3-21  #8C4907 on #F5F1E8
 8:  3-21  #8C4907 on #F5F1E8
 9:  3-21  #8C4907 on #F5F1E8
 9: 24-25  #17161C on #F5F1E8 bold
10:  3-21  #8C4907 on #F5F1E8
11:  0-22  #8C4907 on #F5F1E8
12:  3-9   #8C4907 on #F5F1E8 bold reversed
12: 12-20  #8C4907 on #F5F1E8 bold
12: 21-23  #555355 on #F5F1E8
12: 24-36  #8C4907 on #F5F1E8 bold
12: 37-53  #8C4907 on #F5F1E8
12: 64-68  #555355 on #F5F1E8
14:  3-8   #8C4907 on #F5F1E8
14: 11-18  #555355 on #F5F1E8
15: 11-18  #555355 on #F5F1E8
16: 11-18  #555355 on #F5F1E8
17: 11-18  #555355 on #F5F1E8
17: 21-44  #555355 on #F5F1E8
18:  0-21  #8C4907 on #F5F1E8
19:  3-3   #8C4907 on #F5F1E8
19:  5-17  #8C4907 on #F5F1E8
19: 18-35  #555355 on #F5F1E8
20:  0-79  #868482 on #F5F1E8
21:  0-0   #868482 on #F5F1E8
21:  1-3   #8C4907 on #F5F1E8
21:  4-47  #555355 on #F5F1E8
21: 79-79  #868482 on #F5F1E8
22:  0-79  #868482 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 66-79  #868482 on #F5F1E8
