crates/zenith/tests/snapshots/screens__session_after_calls__80x24__no_colour_ascii.snap
---
source: crates/zenith/tests/screens.rs
expression: screen(&buffer)
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                .     .     ? keys
   executable           /home/lab/solar/target/release/solar
   os                   linux
   os_build             null
   os_family            unix
   os_name              AlmaLinux
   os_release           "9.8"
   path_list_separator  :
   path_separator       /
   pointer_width        64
   temp_dir             /tmp
 > /describe solar.pign
    error   NOT_FOUND - API_NOT_FOUND - solar.describe - 0.31 ms - #5
   No API is registered under the name solar.pign.
   /api    expected  solar.ping
           received  solar.pign
           hint      Did you mean "solar.ping"? The edit distance is 2.
           docs      docs/ERRORS.md#not_found
 > /call solar.version
   ' solar.version, waiting 300.0 ms
+------------------------------------------------------------------------------+
| > Type / for the commands, or ? for every key.                               |
+------------------------------------------------------------------------------+
 --*-- SOLAR 0.1.0 - solar/1 --- last call 0.31 ms --- in orbit 3s ------------
--- every cell not listed is - on -
 0:  0-7   - on - bold
 0: 10-18  - on - bold underlined
 0: 45-72  - on - dim
 0: 73-73  - on - bold
 1:  3-21  - on - bold
 2:  3-21  - on - bold
 3:  3-21  - on - bold
 4:  3-21  - on - bold
 5:  3-21  - on - bold
 6:  3-21  - on - bold
 7:  3-21  - on - bold
 8:  3-21  - on - bold
 9:  3-21  - on - bold
 9: 24-25  - on - bold
10:  3-21  - on - bold
11:  0-22  - on - bold
12:  3-9   - on - bold reversed
12: 12-20  - on - bold
12: 24-53  - on - bold
14:  3-8   - on - bold
18:  0-21  - on - bold
19:  3-3   - on - bold
19:  5-17  - on - bold
20:  0-79  - on - dim
21:  0-0   - on - dim
21:  1-3   - on - bold
21: 79-79  - on - dim
22:  0-79  - on - dim
23:  0-2   - on - dim
23:  3-3   - on - bold
23:  4-6   - on - dim
23:  7-17  - on - bold
23: 28-32  - on - dim
23: 50-54  - on - dim
23: 66-79  - on - dim
